Fix header CTA alignment in IE. Form styles.

--- a/wp-content/themes/simple/resources/assets/styles/common/_global.scss
+++ b/wp-content/themes/simple/resources/assets/styles/common/_global.scss
@@ -111,6 +111,11 @@ body {
   right: 0;
 }
 
+.relative-right {
+  position: relative;
+  right: 0;
+}
+
 .relative {
   position: relative;
 }
