--- a/wp-content/themes/simple/resources/assets/styles/components/_forms.scss
+++ b/wp-content/themes/simple/resources/assets/styles/components/_forms.scss
@@ -80,3 +80,13 @@
     color: $error-color;
   }
 }
+
+.input-field {
+  @for $n from 1 through length($themes-list) {
+    [data-color="#{nth($themes-list, $n)}"] {
+      label:not(.label-icon).active {
+        color: nth($color-secondary-list, $n);
+      }
+    }
+  }
+}
